{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 9,
  "lineage": "7e912088-be9e-3818-c637-2e795110523a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:internet-gateway/igw-05d9b83cd8c424800",
            "id": "igw-05d9b83cd8c424800",
            "owner_id": "147876441483",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-06a79c65b1b315f3e"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myprivatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:route-table/rtb-04007df8606d78e0c",
            "id": "rtb-04007df8606d78e0c",
            "owner_id": "147876441483",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myprivateroutetable"
            },
            "tags_all": {
              "Name": "myprivateroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a79c65b1b315f3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mypublicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:route-table/rtb-09b1be4fdacbb23be",
            "id": "rtb-09b1be4fdacbb23be",
            "owner_id": "147876441483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d9b83cd8c424800",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mypublicroutetable"
            },
            "tags_all": {
              "Name": "mypublicroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a79c65b1b315f3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bdad739abe9ff19",
            "route_table_id": "rtb-04007df8606d78e0c",
            "subnet_id": "subnet-03e021c4215d62746"
          },
          "dependencies": [
            "aws_route_table.myprivatert",
            "aws_subnet.private_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6e4378b778f289a",
            "route_table_id": "rtb-09b1be4fdacbb23be",
            "subnet_id": "subnet-093a9577ae26abb55"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.mypublicrt",
            "aws_subnet.public_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:subnet/subnet-03e021c4215d62746",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e021c4215d62746",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147876441483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myprivatesubnet"
            },
            "tags_all": {
              "Name": "myprivatesubnet"
            },
            "vpc_id": "vpc-06a79c65b1b315f3e"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:subnet/subnet-093a9577ae26abb55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093a9577ae26abb55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147876441483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mypublicsubnet"
            },
            "tags_all": {
              "Name": "mypublicsubnet"
            },
            "vpc_id": "vpc-06a79c65b1b315f3e"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:vpc/vpc-06a79c65b1b315f3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0844a562953826692",
            "default_route_table_id": "rtb-045c75672849405fe",
            "default_security_group_id": "sg-014bbab78ad69619b",
            "dhcp_options_id": "dopt-fde1389b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06a79c65b1b315f3e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-045c75672849405fe",
            "owner_id": "147876441483",
            "tags": {
              "Name": "myvpc"
            },
            "tags_all": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}